syntax = "proto3";
    
service HelloService {
    rpc GetGreeting(HelloRequest) returns (HelloResponse) {}
}

message HelloResponse {
    string greeting = 1;
}

message HelloRequest {
    string name = 1;
}